# Math-OpenGL-InverseKinematics

./: CMakeLists.txt  README.md
ShaderPrograms/: IK.frag  IK.vert
Source/: main.cpp
